Update Forgot Password

--- a/src/main/resources/templates/passwordreset.html
+++ b/src/main/resources/templates/passwordreset.html
@@ -6,7 +6,8 @@
     <div>
       <div class="m_-7970977519448116421bold">Xin chào <span th:text="${name}"></span>!</div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Bạn đã yêu cầu đặt lại mật khẩu. Để tiếp tục vui lòng nhấn vào đường link bên dưới!</div>
-      <div class="m_-7970977519448116421message" style="margin-top:20px"><a th:href="${content}">Reset password</a></div>
+      <div class="m_-7970977519448116421message" style="margin-top:20px"><p>Mã xác thực của bạn là:</p><input
+              type="text" readonly name="" id="" th:value="${content}"></div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Nếu bạn có bất kỳ câu hỏi nào, vui lòng liên hệ với chúng tôi để được hỗ trợ.</div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Lưu ý:</div>
       <ul class="m_-7970977519448116421message">
