--- a/src/main/resources/templates/xacthuc.html
+++ b/src/main/resources/templates/xacthuc.html
@@ -6,7 +6,8 @@
     <div>
       <div class="m_-7970977519448116421bold">Xin chào <span th:text="${name}"></span>!</div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Cảm ơn bạn đã đăng ký tài khoản tại BookBox. Để hoàn tất quá trình đăng ký, vui lòng nhấn vào link dưới đây để xác thực tài khoản.</div>
-      <div class="m_-7970977519448116421message" style="margin-top:20px"><a th:href="${content}">Click on me!</a></div>
+      <div class="m_-7970977519448116421message" style="margin-top:20px"><p>Mã xác thực của bạn là:</p><input
+              type="text" readonly name="" id="" th:value="${content}"></div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Sau khi xác minh, bạn sẽ có thể sử dụng tài khoản của mình và truy cập các dịch vụ của chúng tôi.</div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Nếu bạn có bất kỳ câu hỏi nào, vui lòng liên hệ với chúng tôi để được hỗ trợ.</div>
       <div class="m_-7970977519448116421message" style="margin-top:20px">Lưu ý:</div>
